--- a/Project_2_With_Data.ipynb
+++ b/Project_2_With_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,6 +898,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "# Parameter grids for each model\n",
     "rf_param_grid = {\n",
     "    'n_estimators': [100, 200, 300],\n",
@@ -923,7 +924,79 @@
     "    'min_child_weight': [1, 5, 10], # Minimum sum of instance weights (hessian) in a child\n",
     "    'gamma': [0, 0.1, 0.5], # Minimum loss reduction required to make a further partition on a lead node.\n",
     "    'scale_pos_weight': [scale_pos_weight, scale_pos_weight * 2] # Adjusts weight of the positive class\n",
-    "}"
+    "}\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loads csv for each model to get parameters from\n",
+    "def load_param_grid(file_path):\n",
+    "    df_params = pd.read_csv(file_path)\n",
+    "    param_grid = {}\n",
+    "    for _, row in df_params.iterrows():\n",
+    "        param = row['parameter']\n",
+    "        values = row.drop('parameter').dropna().tolist()\n",
+    "        converted_values = []\n",
+    "        for val in values:\n",
+    "            if isinstance(val, str):\n",
+    "                val = val.strip()\n",
+    "                if val == \"None\":\n",
+    "                    converted_values.append(None)\n",
+    "                elif val.startswith(\"{\") and val.endswith(\"}\"):\n",
+    "                    try:\n",
+    "                        converted_values.append(literal_eval(val))\n",
+    "                    except Exception:\n",
+    "                        converted_values.append(val)\n",
+    "                else:\n",
+    "                    try:\n",
+    "                        converted_values.append(int(val))\n",
+    "                    except ValueError:\n",
+    "                        try:\n",
+    "                            converted_values.append(float(val))\n",
+    "                        except ValueError:\n",
+    "                            converted_values.append(val)\n",
+    "            else:\n",
+    "                converted_values.append(val)\n",
+    "        param_grid[param] = converted_values\n",
+    "    return param_grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Updates parameters so the model can continue to train and improve\n",
+    "def update_csv_param_grid(file_path, best_params):\n",
+    "    df = pd.read_csv(file_path)\n",
+    "    new_rows = []\n",
+    "    for _, row in df.iterrows():\n",
+    "        param = row['parameter']\n",
+    "        if param in best_params:\n",
+    "            best_val = best_params[param]\n",
+    "            if isinstance(best_val, (int, float)) and best_val is not None:\n",
+    "                delta = 0.1 * best_val  # 10% variation\n",
+    "                if isinstance(best_val, int):\n",
+    "                    candidates = [int(round(best_val - delta)), best_val, int(round(best_val + delta))]\n",
+    "                else:\n",
+    "                    candidates = [round(best_val - delta, 4), round(best_val, 4), round(best_val + delta, 4)]\n",
+    "            else:\n",
+    "                candidates = [best_val]\n",
+    "            new_row = {'parameter': param}\n",
+    "            for i, cand in enumerate(candidates, start=1):\n",
+    "                new_row[f'value{i}'] = cand\n",
+    "            new_rows.append(new_row)\n",
+    "        else:\n",
+    "            new_rows.append(row.to_dict())\n",
+    "    new_df = pd.DataFrame(new_rows)\n",
+    "    new_df.to_csv(file_path, index=False)\n",
+    "    print(f\"Updated parameter grid saved to {file_path}\")"
    ]
   },
   {
